Wallet created for new user signUp

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -64,7 +64,7 @@
    {{#if admin}}
 
     {{else if user}}
-    <footer class="footer">
+    <footer class="footer bg-dark">
             <div class="footer-middle">
                 <div class="container">
                     <div class="row">
@@ -90,7 +90,7 @@
 
                         <div class="col-sm-6 col-lg-3">
                             <div class="widget">
-                                <h4 class="widget-title">Useful Links</h4><!-- End .widget-title -->
+                                <h4 class="widget-title text-light">Useful Links</h4><!-- End .widget-title -->
 
                                 <ul class="widget-list">
                                     <li><a href="/">About Kairos</a></li>
@@ -104,7 +104,7 @@
 
                         <div class="col-sm-6 col-lg-3">
                             <div class="widget">
-                                <h4 class="widget-title">Customer Service</h4><!-- End .widget-title -->
+                                <h4 class="widget-title text-light">Customer Service</h4><!-- End .widget-title -->
 
                                 <ul class="widget-list">
                                     <li><a href="#">Payment Methods</a></li>
@@ -119,7 +119,7 @@
 
                         <div class="col-sm-6 col-lg-3">
                             <div class="widget">
-                                <h4 class="widget-title">My Account</h4><!-- End .widget-title -->
+                                <h4 class="widget-title text-light">My Account</h4><!-- End .widget-title -->
 
                                 <ul class="widget-list">
                                     <li><a href="/login">Sign In</a></li>
