Product Search In User Side

--- a/views/partials/userHeader.hbs
+++ b/views/partials/userHeader.hbs
@@ -51,11 +51,11 @@
                     <div class="header-center">
                         <div class="header-search header-search-extended header-search-visible d-none d-lg-block">
                             <a href="#" class="search-toggle" role="button"><i class="icon-search"></i></a>
-                            <form action="#" method="get">
+                            <form method="post" action="/searchProduct">
                                 <div class="header-search-wrapper search-wrapper-wide">
                                     <label for="q" class="sr-only">Search</label>
                                     <button class="btn btn-primary" type="submit"><i class="icon-search"></i></button>
-                                    <input type="search" class="form-control" name="q" id="q"
+                                    <input type="search" class="form-control" name="search" id="search"
                                         placeholder="Search product ..." required>
                                 </div><!-- End .header-search-wrapper -->
                             </form>
@@ -165,3 +165,9 @@
     </div>
 </body>
 
+
+<script>
+    function proSearch(){
+        alert("hai")
+    }
+</script>
