--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -51,7 +51,7 @@
                                     <li class="nav-item">
                                         <a class="nav-link" id="tab-downloads-link" data-toggle="tab"
                                             href="#tab-downloads" role="tab" aria-controls="tab-downloads"
-                                            aria-selected="false">Downloads</a>
+                                            aria-selected="false">Wallet</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" id="tab-address-link" data-toggle="tab" href="#tab-address"
