--- a/views/admin/viewProducts.hbs
+++ b/views/admin/viewProducts.hbs
@@ -48,7 +48,7 @@
                 {{/if}}
                
               </td>
-              <td><img style="height:50px ;width:50px ;" src="/productImages/{{this._id}}.jpg" alt=""></td>
+              <td><img style="height:50px ;width:50px ;" src="/pictures/productImages/{{this.image.[0]}}" alt="Image"></td>
               <td class="p-3"><a class="fa-solid fa-pen-to-square fs-5" href="/admin/editProducts/{{this._id}}"></a>
                 &nbsp;
                 &nbsp;
