--- a/views/users/product.hbs
+++ b/views/users/product.hbs
@@ -51,7 +51,7 @@
                                             <figure class="product-media">
                                                 {{!-- <span class="product-label label-out">Out of Stock</span> --}}
                                                 <a href="/product/{{this._id}}">
-                                                    <img src="/productImages/{{this._id}}.jpg" alt="Product image"
+                                                    <img src="/pictures/productImages/{{this.image.[2]}}" alt="Product image"
                                                         class="product-image">
                                                 </a>
 
