--- a/views/users/singleProduct.hbs
+++ b/views/users/singleProduct.hbs
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel="apple-touch-icon" sizes="180x180" href="/userAssets/images/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/userAssets/images/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/userAssets/images/icons/favicon-16x16.png">
+    <link rel="manifest" href="/userAssets/images/icons/site.html">
+    <link rel="mask-icon" href="/userAssets/images/icons/safari-pinned-tab.svg" color="#666666">
+    <link rel="shortcut icon" href="/userAssets/images/icons/favicon.ico">
+    <meta name="apple-mobile-web-app-title" content="Molla">
+    <meta name="application-name" content="Molla">
+    <meta name="msapplication-TileColor" content="#cc9966">
+    <meta name="msapplication-config" content="/userAssets/images/icons/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
     <!-- Plugins CSS File -->
     <link rel="stylesheet" href="/userAssets/css/bootstrap.min.css">
     <link rel="stylesheet" href="/userAssets/css/plugins/owl-carousel/owl.carousel.css">
+    <link rel="stylesheet" href="/userAssets/css/plugins/magnific-popup/magnific-popup.css">
     <!-- Main CSS File -->
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <link rel="stylesheet" href="/userAssets/css/style.css">
+    <link rel="stylesheet" href="/userAssets/css/plugins/nouislider/nouislider.css">
 
 </head>
 
@@ -42,10 +54,8 @@
                             <div class="col-md-6">
                                 <div class="product-gallery product-gallery-vertical">
                                     <div class="row">
-                                        <figure class="product-main-image" >
-                                            <img  id="product-zoom" src="/productImages/{{product._id}}.jpg"
-                                                data-zoom-image="/productImages/{{product._id}}.jpg"
-                                                alt="product image">
+                                        <figure class="product-main-image">
+                                            <img id="product-zoom" src="/pictures/productimages/{{product.image.[0]}}" data-zoom-image="/pictures/productimages/{{product.image.[3]}}" alt="product image">
 
                                             <a href="#" id="btn-product-gallery" class="btn-product-gallery">
                                                 <i class="icon-arrows"></i>
@@ -53,28 +63,20 @@
                                         </figure><!-- End .product-main-image -->
 
                                         <div id="product-zoom-gallery" class="product-image-gallery">
-                                            <a class="product-gallery-item active" href="#"
-                                                data-image="/productImages/{{product._id}}.jpg"
-                                                data-zoom-image="/productImages/{{product._id}}.jpg">
-                                                <img src="/productImages/{{product._id}}.jpg" alt="product side">
+                                            <a class="product-gallery-item active" href="#" data-image="/pictures/productimages/{{product.image.[3]}}" data-zoom-image="/pictures/productimages/{{product.image.[3]}}">
+                                                <img src="/pictures/productimages/{{product.image.[3]}}" alt="product side">
                                             </a>
 
-                                            <a class="product-gallery-item" href="#"
-                                                data-image="/productImages/{{product._id}}.jpg"
-                                                data-zoom-image="/productImages/{{product._id}}.jpg">
-                                                <img src="/productImages/{{product._id}}.jpg" alt="product cross">
+                                            <a class="product-gallery-item" href="#" data-image="/pictures/productimages/{{product.image.[0]}}" data-zoom-image="/pictures/productimages/{{product.image.[0]}}">
+                                                <img src="/pictures/productimages/{{product.image.[0]}}" alt="product cross">
                                             </a>
 
-                                            <a class="product-gallery-item" href="#"
-                                                data-image="/productImages/{{product._id}}.jpg"
-                                                data-zoom-image="/productImages/{{product._id}}.jpg">
-                                                <img src="/productImages/{{product._id}}.jpg" alt="product with model">
+                                            <a class="product-gallery-item" href="#" data-image="/pictures/productimages/{{product.image.[1]}}" data-zoom-image="/pictures/productimages/{{product.image.[1]}}">
+                                                <img src="/pictures/productimages/{{product.image.[1]}}" alt="product with model">
                                             </a>
 
-                                            <a class="product-gallery-item" href="#"
-                                                data-image="/productImages/{{product._id}}.jpg"
-                                                data-zoom-image="/productImages/{{product._id}}.jpg">
-                                                <img src="/productImages/{{product._id}}.jpg" alt="product back">
+                                            <a class="product-gallery-item" href="#" data-image="/pictures/productimages/{{product.image.[2]}}" data-zoom-image="/pictures/productimages/{{product.image.[2]}}">
+                                                <img src="/pictures/productimages/{{product.image.[2]}}" alt="product back">
                                             </a>
                                         </div><!-- End .product-image-gallery -->
                                     </div><!-- End .row -->
@@ -549,7 +551,7 @@
                 <div class="col-6">
                     <figure class="product-media">
                         <a href="/product/:{{this._id}}">
-                            <img src="/productImages/{{product._id}}.jpg" alt="Product image">
+                            <img src="/pictures/productImages/{{product.image.[0]}}" alt="Product image">
                         </a>
                     </figure><!-- End .product-media -->
                     <h4 class="product-title"><a href="/product/:{{product._id}}">{{product.brandDetails.brand}}</a>
@@ -730,9 +732,15 @@
 
     <!-- Plugins JS File -->
     <script src="/userAssets/js/jquery.min.js"></script>
+    <script src="/userAssets/js/bootstrap.bundle.min.js"></script>
+    <script src="/userAssets/js/jquery.hoverIntent.min.js"></script>
     <script src="/userAssets/js/jquery.waypoints.min.js"></script>
+    <script src="/userAssets/js/superfish.min.js"></script>
     <script src="/userAssets/js/owl.carousel.min.js"></script>
+    <script src="/userAssets/js/bootstrap-input-spinner.js"></script>
     <script src="/userAssets/js/jquery.elevateZoom.min.js"></script>
+    <script src="/userAssets/js/bootstrap-input-spinner.js"></script>
+    <script src="/userAssets/js/jquery.magnific-popup.min.js"></script>
     <!-- Main JS File -->
     <script src="/userAssets/js/main.js"></script>
     {{/if}}
