Admin Sales Report download

--- a/views/partials/adminHeader.hbs
+++ b/views/partials/adminHeader.hbs
@@ -340,7 +340,7 @@
       </li><!-- End Tables Nav -->
       <li class="nav-item">
         <a class="nav-link collapsed" href="/admin/viewBanner">
-          <i class="bi bxs-grid"></i>
+          <i class="ri-page-separator"></i>
           <span>Banner</span>
         </a>
       </li><!-- End Blank Page Nav -->
@@ -358,8 +358,12 @@
       </li>
 <hr>
 
-
-   
+<li class="nav-item">
+        <a class="nav-link collapsed" href="/admin/salesReport">
+          <i class="bi bi-bar-chart-fill" ></i>
+          <span>Sales Report</span>
+        </a>
+      </li>
 
   </aside><!-- End Sidebar-->
 
