--- a/views/partials/userHeader.hbs
+++ b/views/partials/userHeader.hbs
@@ -64,7 +64,7 @@
 
                     <div class="header-right">
                         <div class="wishlist">
-                            <a href="wishlist.html" title="Wishlist">
+                            <a href="/wishlist" title="Wishlist">
                                 <div class="icon">
                                     <i class="icon-heart-o"></i>
                                     <span class="wishlist-count badge">3</span>
