--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -59,6 +59,7 @@
     <!-- Main JS File -->
     <script src="/userAssets/js/main.js"></script> --}}
     <script src="/javascripts/script.js"></script>
+    <script src="/javascripts/wishlist.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </body>
    {{#if admin}}
