WhishList add to cart

--- a/views/partials/adminHeader.hbs
+++ b/views/partials/adminHeader.hbs
@@ -356,6 +356,7 @@
           <span>Return Orders</span>
         </a>
       </li>
+      <hr>
       <li class="nav-item">
         <a class="nav-link collapsed" data-bs-target="#icons-nav" data-bs-toggle="collapse" href="#">
           <i class="bi bi-gem"></i><span>Offers</span><i class="bi bi-chevron-down ms-auto"></i>
@@ -378,6 +379,14 @@
           </li>
         </ul>
       </li><!-- End Icons Nav -->
+
+
+     <li class="nav-item">
+        <a class="nav-link collapsed" href="/admin/coupon">
+          <i class="bi bi-bar-chart-fill" ></i>
+          <span>Coupon</span>
+        </a>
+      </li> 
 <hr>
 
 <li class="nav-item">
