--- a/views/partials/adminHeader.hbs
+++ b/views/partials/adminHeader.hbs
@@ -383,7 +383,7 @@
 
      <li class="nav-item">
         <a class="nav-link collapsed" href="/admin/coupon">
-          <i class="bi bi-bar-chart-fill" ></i>
+          <i class="bi bi-gift-fill" ></i>
           <span>Coupon</span>
         </a>
       </li> 
