--- a/views/admin/addCoupoun.hbs
+++ b/views/admin/addCoupoun.hbs
@@ -1,25 +1,60 @@
 <main id="main" class="main">
-    <header>
-        <div>
-            <h3 class="text-primary">Add Coupon</h3>
+  <header>
+    <div>
+      <h3 class="text-primary">Add Coupon</h3>
+    </div>
+    <hr>
+  </header>
+  <section>
+    <form id="addCouponForm">
+      <div class="row mb-3 mt-5">
+        <label for="inputText" class="col-sm-2  col-form-label">Offer Text</label>
+        <div class="col-sm-4">
+          <input type="text" class="form-control" name="offertext" required>
         </div>
-       <hr>
-    </header>
-    <section>
-<form action="/admin/addCoupon" method="post">
-    <div class="row mb-3 mt-5">
-          <label for="inputText" class="col-sm-2  col-form-label" >Offer Text</label>
-          <div class="col-sm-4">
-            <input type="text" class="form-control" name="offertext" required>
-          </div>
-          <div class="row mb-3 mt-5">
+        <p id="msg" class="text-danger "></p>
+        <div class="row mb-3 mt-5">
           <label for="inputText" class="col-sm-2  col-form-label">Offer Percentage</label>
-          <div class="col-sm-4">
+          <div class="col-sm-2">
             <input type="number" class="form-control" name="offerPercentage" min="1" max="100" required>
           </div>
-          <div class="text-center mt-5">
-            <button type="submit" class="btn btn-success">Proceed</button>
-          </div>
-</form>
-    </section>
+          <div class="col-md-6"></div>
+          <div class="row mb-3 mt-5">
+            <label for="inputText" class="col-sm-2  col-form-label">Expiry Date</label>
+            <div class="col-sm-3">
+              <input type="date" class="form-control" name="expiryDate" min="1" max="100" required>
+            </div>
+            <p id="msg1" class="text-danger"></p>
+            <div class="text-center mt-5">
+              <button type="submit" class="btn btn-success">Proceed</button>
+            </div>
+    </form>
+  </section>
 </main>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script>
+  $('#addCouponForm').submit((e) => {
+    e.preventDefault()
+
+   $.ajax({
+    url:'/admin/addCoupon',
+    type:'post',
+    data:$('#addCouponForm').serialize(),
+    success:(response)=>{
+      alert
+      if(response.status){
+        location.href = '/admin/coupon'
+      }else if(response.coupon){
+        document.getElementById('msg').innerHTML = 'Oops a coupon with same name alredy exist'
+      }
+      else if(response.date){
+      document.getElementById('msg1').innerHTML = 'Expiry date should not prior to the current date'
+      }
+    }
+   })
+     
+
+      
+
+  })
+</script>
